--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hot-loader": "4.2.0",
     "style-loader": "^0.21.0",
     "webpack": "^4.8.3",
+    "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.2"
   },
